--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h3><bold>Wie Mara Jesser zu Mara Messer wurde</bold><h3>
 	<img src="messer.png" width="500px" height="auto">
 	<p>Montag morgen. Ein Tag wie jeder andere. Mara Jesser wacht auf. Sie geht in die Küche. Angekommen in der Hexenküche macht sie sich Frühstück.</p>
-	<p>Als sie in der Besteckschublade greift, um sich Löffel und Messer zu holen, schneidet sie sich versehentlich an der Klinge des Messers. Man könnte glauben, sei hätte sich verletzt - doch nicht Mara Jesser.</p>
-	<p>Was keiner wusstewar, dass sie eine geheime Superkraft besitzt. Schneidet sie sich an einem Messer, so wird sie selbst zu einem. Und so kam es, dass Mara Jesser den restlichen Tag als Mara Messer verbrachte. Denn erst um Mitternacht verliert der Zauber seine wirkung.</p> 
+	<p>Als sie in der Besteckschublade greift, um sich Löffel und Messer zu holen, schneidet sie sich versehentlich an der Klinge des Messers. Man könnte glauben, sie hätte sich verletzt - doch nicht Mara Jesser.</p>
+	<p>Was keiner wusste war, dass sie eine geheime Superkraft besitzt. Schneidet sie sich an einem Messer, so wird sie selbst zu einem. Und so kam es, dass Mara Jesser den restlichen Tag als Mara Messer verbrachte. Denn erst um Mitternacht verliert der Zauber seine Wirkung.</p> 
   </body>
 </html>
